--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3287,7 +3287,7 @@
 					<p class="footnote">3. Mt. 4, 25.</p>
 					<p><em>ⲁⲩⲓ ϩⲁⲣⲟϥ ⲛ̀ϫⲉ ⲡⲓⲙⲉⲧⲥⲛⲁⲩ</em> «les douze vinrent vers lui»<sup class="footnote">1</sup>.</p>
 				</div>
-				<p>2. Nombres distributifs.</p>
+				<p><b>2.</b> Nombres distributifs.</p>
 				<div id="section-181" class="section" data-section-no="181">
 					<p>Les nombres cardinaux redoublés forment les distributifs:</p>
 					<table>
@@ -3322,9 +3322,9 @@
 					<p>Ils s'expriment par les nombres distributifs joints au substantif au moyen de (<em>ⲛ̀</em>):</p>
 					<p><em>ⲥⲛⲁⲩ ⲥⲛⲁⲩ ⲛ̀ⲉϩⲟⲟⲩ</em> «tous les deux jours».</p>
 				</div>
-				<p>3. Nombres ordinaux.</p>
+<p><b>3.</b> Nombres ordinaux.</p>
 				<div id="section-183" class="section" data-section-no="183">
-					<p>Ils se forment par l'addition du préfixe <em>ⲙⲁϩ-</em> aux nombres cardinaux; ils se mettent avant ou après le substantif avec (<em>ⲛ̀</em>):</p>
+					<p>Ils se forment par l'addition du préfixe <em>ⲙⲁϩ-</em> aux nombres cardinaux; ils se mettent avant ou après le substantif avec <em>ⲛ̀</em>:</p>
 					<p class="footnote">1. Luc 9, 12.</p>
 					<p class="footnote">2. 1 Cor. 14, 31.</p>
 					<p class="footnote">3. Mc. 6, 40.</p>
@@ -3336,14 +3336,14 @@
 				</div>
 				<div id="section-184" class="section" data-section-no="184">
 					<p><i>Remarques.</i></p>
-					<p>1. <em>ⲥⲛⲁⲩ</em> est quelquefois séparé de <em>ⲙⲁϩ</em> par le substantif: </p>
+					<p><b>1.</b> <em>ⲥⲛⲁⲩ</em> est quelquefois séparé de <em>ⲙⲁϩ</em> par le substantif: </p>
 					<p><em>ϧⲉⲛ ⲥⲟⲩⲁⲓ ⲙ̀ⲡⲓⲁⲃⲟⲧ ⲙ̀ⲙⲁϩⲥⲛⲁⲩ ϧⲉⲛ ⲑⲙⲁϩⲣⲟⲙⲡⲓ ⲥⲛⲟⲩϯ</em> «le premier jour du second mois, la deuxième année»<sup class="footnote">5</sup>.</p>
-					<p>2. «Premier» se dit <em>ϣⲟⲣⲡ</em>, <i>fém.</i> <em>ϣⲟⲣⲡⲓ</em>, qui se place toujours avant le substantif, et <em>ϩⲟⲩⲓⲧ</em>, <i>fém.</i> <em>ϩⲟⲩⲓϯ</em>, qui se met avant ou après:</p>
+					<p><b>2.</b> «Premier» se dit <em>ϣⲟⲣⲡ</em>, <i>fém.</i> <em>ϣⲟⲣⲡⲓ</em>, qui se place toujours avant le substantif, et <em>ϩⲟⲩⲓⲧ</em>, <i>fém.</i> <em>ϩⲟⲩⲓϯ</em>, qui se met avant ou après:</p>
 					<p><em>ⲡⲓⲉϩⲟⲟⲩ ⲛ̀ϩⲟⲩⲓⲧ</em> «le premier jour»<sup class="footnote">6</sup>.</p>
 					<p><em>ⲡⲓϩⲟⲩⲓⲧ ⲛ̀ⲁⲃⲟⲧ</em> «le premier mois»<sup class="footnote">7</sup>.</p>
 					<p><em>ϣⲟⲣⲡ ⲛ̀ⲟⲩⲧⲁϩ ⲛⲓⲃⲉⲛ</em> «tout premier fruit»<sup class="footnote">8</sup>.</p>
 				</div>
-				<p>4. Nombres fractionnaires.</p>
+<p><b>4.</b> Nombres fractionnaires.</p>
 				<div id="section-185" class="section" data-section-no="185">
 					<p>«Demi» se traduit par <em>ⲫⲁϣⲓ</em>, de <em>ⲫⲱϣ</em> «diviser», ou par <em>ϫⲟⲥ</em>, <em>ϫⲉⲥ-</em>. Ce dernier mot prend toujours l'article indéfini <em>ⲟⲩ</em>. Quand le substantif est seul, <em>ϫⲟⲥ</em> se place après lui:</p>
 					<p><em>ⲟⲩⲙⲁϩⲓ ⲟⲩϫⲟⲥ</em> «une coudée et demie»<sup class="footnote">9</sup>.</p>
@@ -3372,10 +3372,11 @@
 					<p><em>ⲣⲉϣⲙⲏⲛ</em> «un huitième»,</p>
 					<p><em>ⲣⲉⲯⲓⲧ</em> «un neuvième»,</p>
 					<p><em>ⲣⲉⲙⲏⲧ</em> «un dixième».</p>
-					<p>Ex: <em>ⲫⲣⲉϣⲟⲙⲧ ⲛ̀ⲟⲩϩⲓⲛ</em> «le tiers d'un hin»<sup class="footnote">2</sup>.</p>
+					<p>Ex:</p>
+					<p><em>ⲫⲣⲉϣⲟⲙⲧ ⲛ̀ⲟⲩϩⲓⲛ</em> «le tiers d'un hin»<sup class="footnote">2</sup>.</p>
 					<p>On trouve aussi, mais rarement, comme préfixe fractionnaire <em>ⲧⲉⲣⲉ</em>, ex. <em>ⲡⲓⲧⲉⲣⲉ-ϥⲧⲱⲟⲩ</em> «le quart»<sup class="footnote">3</sup>, et <em>ⲟⲩⲉⲛ-</em> dont la forme pleine <em>ⲟⲩⲱⲛ</em> n'est employée qu'en Ṣaꜥidique: <em>ⲡⲓⲟⲩⲉⲛ-ϥⲧⲱⲟⲩ</em> «la quatrième partie»<sup class="footnote">4</sup>.</p>
 				</div>
-				<p>II. Notation du temps.</p>
+				<h6>II. Notation du temps.</h6>
 				<div id="section-187" class="section" data-section-no="187">
 					<p>L'année (<em>ϯⲣⲟⲙⲡⲓ</em>) qui commence le 29 août<sup class="footnote">5</sup> est composée de 12 mois (<em>ⲁⲃⲟⲧ</em>) chacun de 30 jours. Elle est augmentée de 5 jours complémentaires (6 dans l'année bissextile) qui forment le petit mois (<em>ⲡⲓⲕⲟⲩϫⲓ ⲛ̀ⲁⲃⲟⲧ</em>).</p>
 					<p class="footnote">1. Ex. 25, 10.</p>
@@ -3392,12 +3393,12 @@
 						</tr>
 						<tr>
 							<td><em>ⲑⲱⲟⲩⲧ</em></td>
-							<td><em>ⲑⲟⲟⲩⲧ, ⲑⲁⲩⲧ</em></td>
+							<td><em>ⲑⲟⲟⲩⲧ</em>, <em>ⲑⲁⲩⲧ</em></td>
 							<td><em class="ar">توت</em></td>
 						</tr>
 						<tr>
 							<td><em>ⲡⲁⲟⲡⲓ</em></td>
-							<td><em>ⲡⲁⲁⲡⲉ, ⲡⲟⲟⲡⲉ</em></td>
+							<td><em>ⲡⲁⲁⲡⲉ</em>, <em>ⲡⲟⲟⲡⲉ</em></td>
 							<td><em class="ar">بابه</em></td>
 						</tr>
 						<tr>
@@ -3407,7 +3408,7 @@
 						</tr>
 						<tr>
 							<td><em>ⲭⲟⲓⲁⲕ</em></td>
-							<td><em>ⲕⲓⲁϩⲕ, ⲭⲟⲓⲁϩⲕ</em></td>
+							<td><em>ⲕⲓⲁϩⲕ</em>, <em>ⲭⲟⲓⲁϩⲕ</em></td>
 							<td><em class="ar">كيهك</em></td>
 						</tr>
 						<tr>
@@ -3431,13 +3432,13 @@
 							<td><em class="ar">برموده</em></td>
 						</tr>
 						<tr>
-							<td><em>ⲡⲁⲭⲱⲛ, ⲡⲁϣⲟⲛⲥ</em></td>
+							<td><em>ⲡⲁⲭⲱⲛ</em>, <em>ⲡⲁϣⲟⲛⲥ</em></td>
 							<td><em>ⲡⲁϣⲟⲛⲥ</em></td>
 							<td><em class="ar">بشنس</em></td>
 						</tr>
 						<tr>
 							<td><em>ⲡⲁⲱⲛⲓ</em></td>
-							<td><em>ⲡⲁⲱⲛⲉ, ⲡⲁⲁⲛⲉ</em></td>
+							<td><em>ⲡⲁⲱⲛⲉ</em>, <em>ⲡⲁⲁⲛⲉ</em></td>
 							<td><em class="ar">بؤونه</em></td>
 						</tr>
 						<tr>
