--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -4937,20 +4937,56 @@
 						</tr>
 						<tr>
 							<td><em>… ⲁⲛ</em></td><td></td><td></td><td></td><td></td>
-						</tr>				
-			Futur			Futur énergique		Futur antérieur
-			1<sup>r</sup>	2<sup>e</sup>	3<sup>e</sup>	affirmatif	négatif	
-Avec les suffixes.	Sing.	1	ϯⲛⲁ	ⲁⲓⲛⲁ	ⲉⲓⲛⲁ	ⲉⲓⲉ	ⲛ̀ⲛⲁ	ⲛⲁⲓⲛⲁ
-		2 m.	ⲭⲛⲁ	ⲁⲭⲛⲁ	ⲉⲭⲛⲁ	ⲉⲕⲉ	ⲛ̀ⲛⲉⲕ	ⲛⲁⲭⲛⲁ
-		f.	ⲧⲉⲣⲁ	ⲁⲣⲉⲛⲁ	ⲉⲣⲉⲛⲁ	ⲉⲣⲉ	ⲛ̀ⲛⲉ	ⲛⲁⲣⲉⲛⲁ
-		3 m.	ϥⲛⲁ	ⲁϥⲛⲁ	ⲉϥⲛⲁ	ⲉϥⲉ	ⲛ̀ⲛⲉϥ	ⲛⲁϥⲛⲁ
-		f.	ⲥⲛⲁ	ⲁⲥⲛⲁ	ⲉⲥⲛⲁ	ⲉⲥⲉ	ⲛ̀ⲛⲉⲥ	ⲛⲁⲥⲛⲁ
-	Plur.	1	ⲧⲉⲛⲛⲁ	ⲁⲛⲛⲁ	ⲉⲛⲛⲁ	ⲉⲛⲉ	ⲛ̀ⲛⲉⲛ	ⲛⲁⲛⲛⲁ
-		2	ⲧⲉⲧⲉⲛⲛⲁ	ⲁⲣⲉⲧⲉⲛⲛⲁ	ⲉⲣⲉⲧⲉⲛⲛⲁ	ⲉⲣⲉⲧⲉⲛⲉ	ⲛ̀ⲛⲉⲧⲉⲛ	ⲛⲁⲣⲉⲧⲉⲛⲛⲁ
-		3	ⲥⲉⲛⲁ	ⲁⲩⲛⲁ	ⲉⲩⲛⲁ	ⲉⲩⲉ	ⲛ̀ⲛⲟⲩ	ⲛⲁⲩⲛⲁ
-Devant un nom.			<i>rien</i> ⲛⲁ	ⲁⲣⲉ- ⲛⲁ	ⲉⲣⲉ- ⲛⲁ	ⲉⲣⲉ-	ⲛ̀ⲛⲉ-	ⲛⲁⲣⲉ- ⲛⲁ
-Avec négation.			ⲛ̀ … ⲁⲛ	ⲛ̀ … ⲁⲛ				… ⲁⲛ
-			… ⲁⲛ					
+						</tr>
+						<tr>
+							<th colspan="3"></th>
+							<th colspan="3">Futur</th>
+							<th colspan="2">Futur énergique</th>
+							<th>Futur antérieur</th>
+						</tr>
+						<tr>
+							<th colspan="3"></th>
+							<th>1<sup>r</sup></th>
+							<th>2<sup>e</sup></th>
+							<th>3<sup>e</sup></th>
+							<th>affirmatif</th>
+							<th>négatif</th>
+							<th></th>
+						</tr>
+						<tr>
+							<th rowspan="8">Avec les suffixes.</th><th rowspan="5">Sing.</th><th>1.</th><td><em>ϯⲛⲁ</em></td><td><em>ⲁⲓⲛⲁ</em></td><td><em>ⲉⲓⲛⲁ</em></td><td><em>ⲉⲓⲉ</em></td><td><em>ⲛ̀ⲛⲁ</em></td><td><em>ⲛⲁⲓⲛⲁ</em></td>
+						</tr>
+						<tr>
+							<th>2 m.</th><td><em>ⲭⲛⲁ</em></td><td><em>ⲁⲭⲛⲁ</em></td><td><em>ⲉⲭⲛⲁ</em></td><td><em>ⲉⲕⲉ</em></td><td><em>ⲛ̀ⲛⲉⲕ</em></td><td><em>ⲛⲁⲭⲛⲁ</em></td>
+						</tr>
+						<tr>
+							<th>f.</th><td><em>ⲧⲉⲣⲁ</em></td><td><em>ⲁⲣⲉⲛⲁ</em></td><td><em>ⲉⲣⲉⲛⲁ</em></td><td><em>ⲉⲣⲉ</em></td><td><em>ⲛ̀ⲛⲉ</em></td><td><em>ⲛⲁⲣⲉⲛⲁ</em></td>
+						</tr>
+						<tr>
+							<th>3 m.</th><td><em>ϥⲛⲁ</em></td><td><em>ⲁϥⲛⲁ</em></td><td><em>ⲉϥⲛⲁ</em></td><td><em>ⲉϥⲉ</em></td><td><em>ⲛ̀ⲛⲉϥ</em></td><td><em>ⲛⲁϥⲛⲁ</em></td>
+						</tr>
+						<tr>
+							<th>f.</th><td><em>ⲥⲛⲁ</em></td><td><em>ⲁⲥⲛⲁ</em></td><td><em>ⲉⲥⲛⲁ</em></td><td><em>ⲉⲥⲉ</em></td><td><em>ⲛ̀ⲛⲉⲥ</em></td><td><em>ⲛⲁⲥⲛⲁ</em></td>
+						</tr>
+						<tr>
+							<th rowspan="3">Plur.</th><th>1.</th><td><em>ⲧⲉⲛⲛⲁ</em></td><td><em>ⲁⲛⲛⲁ</em></td><td><em>ⲉⲛⲛⲁ</em></td><td><em>ⲉⲛⲉ</em></td><td><em>ⲛ̀ⲛⲉⲛ</em></td><td><em>ⲛⲁⲛⲛⲁ</em></td>
+						</tr>
+						<tr>
+							<th>2.</th><td><em>ⲧⲉⲧⲉⲛⲛⲁ</em></td><td><em>ⲁⲣⲉⲧⲉⲛⲛⲁ</em></td><td><em>ⲉⲣⲉⲧⲉⲛⲛⲁ</em></td><td><em>ⲉⲣⲉⲧⲉⲛⲉ</em></td><td><em>ⲛ̀ⲛⲉⲧⲉⲛ</em></td><td><em>ⲛⲁⲣⲉⲧⲉⲛⲛⲁ</em></td>
+						</tr>
+						<tr>
+							<th>3.</th><td><em>ⲥⲉⲛⲁ</em></td><td><em>ⲁⲩⲛⲁ</em></td><td><em>ⲉⲩⲛⲁ</em></td><td><em>ⲉⲩⲉ</em></td><td><em>ⲛ̀ⲛⲟⲩ</em></td><td><em>ⲛⲁⲩⲛⲁ</em></td>
+						</tr>
+						<tr>
+							<th colspan="3">Devant un nom.</th><td><i>rien</i> <em>ⲛⲁ</em></td><td><em>ⲁⲣⲉ- ⲛⲁ</em></td><td><em>ⲉⲣⲉ- ⲛⲁ</em></td><td><em>ⲉⲣⲉ-</em></td><td><em>ⲛ̀ⲛⲉ-</em></td><td><em>ⲛⲁⲣⲉ- ⲛⲁ</em></td>
+						</tr>
+						<tr>
+							<th colspan="3" rowspan="2">Avec négation.</th><td><em>ⲛ̀ … ⲁⲛ</em></td><td rowspan="2"><em>ⲛ̀ … ⲁⲛ</em></td><td></td><td></td><td></td><td><em>… ⲁⲛ</em></td>
+						</tr>
+						<tr>
+							<td><em>… ⲁⲛ</em></td><td></td><td></td><td></td><td></td>
+						</tr>	
+				
 			1<sup>r</sup> parfait		2<sup>e</sup> parfait	Subjonctif		Optatif
 Avec les suffixes.	Sing.	1	affirmatif	négatif		affirmatif	négatif	
 		2 m.	ⲁⲓ	ⲙ̀ⲡⲓ	ⲉⲧⲁⲓ	ⲛ̀ⲧⲁ	ⲛ̀ⲧⲁϣⲧⲉⲙ	ⲙⲁⲣⲓ
