--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -6780,12 +6780,12 @@
 					<p class="footnote">6. Luc 7, 41.</p>
 					<p class="footnote">7. 1 Cor. 15, 40.</p>
 				</div>
-				<p>IV. Particules.</p>
-				<p>Chapitre XIII.</p>
+				<h4>IV. Particules.</h4>
+				<h5>Chapitre XIII.</h5>
 				<p>Prépositions.</p>
 				<div id="section-311" class="section" data-section-no="311">
 					<p>Les prépositions sont <i>simples</i> (<em>ⲉ</em>) ou <i>composées</i> (<em>ⲉ-ϫⲉⲛ</em>). Elles s'emploient avec les noms et avec les pronoms affixes. Dans le premier cas elles sont à l'état construit et l'accent est sur leur régime; dans le second cas elles portent elles-mêmes l'accent tonique.</p>
-					<p>1. Prépositions simples.</p>
+					<h6>1. Prépositions simples.</h6>
 					<p><em>ⲁⲧϭⲛⲉ- ⲁⲧϭⲛⲟⲩ⸗</em> «sans»,</p>
 					<p><em>ⲉ- ⲉⲣⲟ⸗</em> «vers <em class="ar">الى</em>»,</p>
 					<p><em>ⲛ̀- ⲛ⸗</em> «à <em class="ar">لِ</em>»,</p>
@@ -6805,10 +6805,8 @@
 					<p>Avec les suffixes:</p>
 					<table>
 						<tr>
-							<th>Sing.</th>
-							<th></th>
-							<th>Pl.</th>
-							<th></th>
+							<th colspan="2">Sing.</th>
+							<th colspan="2">Pl.</th>
 						</tr>
 						<tr>
 							<td>1.</td>
@@ -6819,20 +6817,22 @@
 						<tr>
 							<td>2 m.</td>
 							<td><em>ⲁⲧϭⲛⲟⲩⲕ</em></td>
-							<td>2.</td>
-							<td><em>ⲁⲧϭⲛⲉ-ⲑⲏⲛⲟⲩ</em></td>
+							<td rowspan="2">2.</td>
+							<td rowspan="2"><em>ⲁⲧϭⲛⲉ-ⲑⲏⲛⲟⲩ</em></td>
+						</tr>
+						<tr>
+							<td>f.</td>
+							<td><em></em></td>
 						</tr>
 						<tr>
 							<td>3 m.</td>
 							<td><em>ⲁⲧϭⲛⲟⲩϥ</em></td>
-							<td>3.</td>
-							<td><em>ⲁⲧϭⲛⲟⲩⲟⲩ</em></td>
+							<td rowspan="2">3.</td>
+							<td rowspan="2"><em>ⲁⲧϭⲛⲟⲩⲟⲩ</em></td>
 						</tr>
 						<tr>
 							<td>f.</td>
 							<td><em>ⲁⲧϭⲛⲟⲩⲥ</em></td>
-							<td></td>
-							<td></td>
 						</tr>
 					</table>
 					<p>Devant un nom: <em>ⲁⲧϭⲛⲉ-</em> ou <em>ⲁϭⲛⲉ-</em>.</p>
@@ -6843,54 +6843,54 @@
 				</div>
 				<div id="section-313" class="section" data-section-no="313">
 					<p>Cette préposition (61) signifie:</p>
-					<p>1. «à, vers, <em class="ar">الى</em>» avec mouvement physique ou moral: <em>ⲉ ⲡϣⲁϥⲉ</em> «vers le désert»<sup class="footnote">3</sup>, <em>ⲉⲣⲟϥ</em> «à lui».</p>
-					<p>2. «à, <em class="ar">لِ</em>» avec le sens du datif: <em>ϩⲟⲛϩⲉⲛ ⲉ</em> «commander à», <em>ⲟⲩⲱⲛϩ ⲉ</em> «montrer à».</p>
-					<p>3. «de, hors de, <em class="ar">من</em>»: <em>ⲛⲟϩⲉⲙ ⲉ ⲧⲥⲏϥⲓ</em> «échapper au glaive»<sup class="footnote">4</sup>.</p>
-					<p>4. «sur, <em class="ar">على</em>»:</p>
+					<p><b>1.</b> «à, vers, <em class="ar">الى</em>» avec mouvement physique ou moral: <em>ⲉ ⲡϣⲁϥⲉ</em> «vers le désert»<sup class="footnote">3</sup>, <em>ⲉⲣⲟϥ</em> «à lui».</p>
+					<p><b>2.</b> «à, <em class="ar">لِ</em>» avec le sens du datif: <em>ϩⲟⲛϩⲉⲛ ⲉ</em> «commander à», <em>ⲟⲩⲱⲛϩ ⲉ</em> «montrer à».</p>
+					<p><b>3.</b> «de, hors de, <em class="ar">من</em>»: <em>ⲛⲟϩⲉⲙ ⲉ ⲧⲥⲏϥⲓ</em> «échapper au glaive»<sup class="footnote">4</sup>.</p>
+					<p><b>4.</b> «sur, <em class="ar">على</em>»:</p>
 					<p><em>ⲟⲩⲟⲛ ⲟⲩⲭⲣⲉⲟⲥ ⲉⲣⲟⲓ</em> «j'ai une dette»<sup class="footnote">5</sup>.</p>
 					<p><em>ⲛ̀ⲑⲟϥ ⲉϥⲉⲉⲣϭⲟⲓⲥ ⲉⲣⲟ</em> «lui-même sera ton maître»<sup class="footnote">6</sup>.</p>
 					<p><em>ⲧⲁⲗⲟ⸗ ⲉ</em> «monter sur».</p>
+					<p><b>5.</b> Elle sert à former le comparatif (171).</p>
 				</div>
-				<p>5. Elle sert à former le comparatif (171).</p>
 				<div id="section-314" class="section" data-section-no="314">
 					<p>Il est un certain nombre de verbes actifs en français qui sont neutres en copte et gouvernent leur complément avec <em>ⲉ- ⲉⲣⲟ⸗</em>.</p>
 					<p>Tels sont:</p>
-					<p>1. Les verbes qui expriment une opération des sens ou de l'esprit:</p>
+					<p><b>1.</b> Les verbes qui expriment une opération des sens ou de l'esprit:</p>
 					<p><em>ⲛⲁⲩ</em> «voir», <em>ϫⲟⲩϣⲧ</em> «regarder», <em>ⲥⲟⲙⲥ</em> «considérer»;</p>
 					<p><em>ⲥⲱⲧⲉⲙ</em> «entendre», <em>ϭⲓⲥⲙⲏ</em> «écouter»;</p>
 					<p><em>ϣⲱⲗⲉⲙ</em> «odorer»;</p>
 					<p><em>ϫⲟⲙϫⲉⲙ</em> «tâter», <em>ϭⲟϩ</em> «toucher»;</p>
 					<p><em>ⲉⲙⲓ</em> «savoir», <em>ⲕⲁϯ</em> «comprendre», <em>ⲙⲉⲩⲓ</em> «penser», <em>ⲛⲁϩϯ</em> «croire», <em>ⲉⲣϩⲉⲗⲡⲓⲥ</em> «espérer».</p>
-					<p>2. Les verbes qui expriment la parole: <em>ⲙⲟⲩϯ</em> «appeler», <em>ⲥⲙⲟⲩ</em> «bénir», <em>ϩⲱⲥ</em> «louer», <em>ϯϩⲟ</em> «prier», <em>ⲥⲁϩⲟⲩⲓ</em> «maudire», <em>ϩⲱⲟⲩϣ</em> «blâmer», <em>ϫⲱⲛⲧ</em> «se fâcher contre».</p>
+					<p><b>2.</b> Les verbes qui expriment la parole: <em>ⲙⲟⲩϯ</em> «appeler», <em>ⲥⲙⲟⲩ</em> «bénir», <em>ϩⲱⲥ</em> «louer», <em>ϯϩⲟ</em> «prier», <em>ⲥⲁϩⲟⲩⲓ</em> «maudire», <em>ϩⲱⲟⲩϣ</em> «blâmer», <em>ϫⲱⲛⲧ</em> «se fâcher contre».</p>
 					<p class="footnote">1. Jean 8, 7.</p>
 					<p class="footnote">2. C. 95, 46.</p>
 					<p class="footnote">3. Mt. 4, 1.</p>
 					<p class="footnote">4. Ez. 6, 8.</p>
 					<p class="footnote">5. Z. 42.</p>
 					<p class="footnote">6. Gen. 3, 16.</p>
-					<p>3. Plusieurs verbes qui expriment le mouvement: <em>ⲕⲓⲙ</em> «mouvoir», <em>ϩⲓⲟⲩⲓ</em> «jeter», <em>ϣⲁⲣⲓ</em> «frapper», <em>ⲕⲱϯ</em>, <em>ⲧⲁⲕⲧⲟ</em> «entourer», <em>ⲁⲣⲉϩ</em>, <em>ⲣⲱⲓⲥ</em> «garder».</p>
-					<p><em>ⲛ̀-</em> (<em>ⲙ̀-</em> 28) <em>ⲛ⸗</em> (de l'ég. <i>n</i>).</p>
+					<p><b>3.</b> Plusieurs verbes qui expriment le mouvement: <em>ⲕⲓⲙ</em> «mouvoir», <em>ϩⲓⲟⲩⲓ</em> «jeter», <em>ϣⲁⲣⲓ</em> «frapper», <em>ⲕⲱϯ</em>, <em>ⲧⲁⲕⲧⲟ</em> «entourer», <em>ⲁⲣⲉϩ</em>, <em>ⲣⲱⲓⲥ</em> «garder».</p>
 				</div>
+				<p><em>ⲛ̀-</em> (<em>ⲙ̀-</em> 28) <em>ⲛ⸗</em> (de l'ég. <i>n</i>).</p>
 				<div id="section-315" class="section" data-section-no="315">
 					<p>C'est la préposition du datif (61):</p>
 					<p><em>ⲡⲉϫⲁϥ ⲙ̀ⲫⲓⲗⲓⲡⲡⲟⲥ</em> «il dit à Philippe»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲡⲉϫⲱⲟⲩ ⲛⲁϥ</em> «ils lui dirent».</p>
 					<p><em>ⲟⲩⲟⲓ ⲙ̀ⲡⲓⲕⲟⲥⲙⲟⲥ</em> «malheur au monde»<sup class="footnote">2</sup>.</p>
 					<p>Le verbe <em>ϯ</em> et ses composés gouvernent le datif avec <em>ⲛ̀</em>.</p>
-					<p><em>ⲛ̀-</em> ( <em>ⲙ̀-</em>) <em>ⲙ̀ⲙⲟ⸗</em> (de l'ég. <i>m</i>).<sup class="footnote">3</sup> «dans».</p>
 				</div>
+				<p><em>ⲛ̀-</em> ( <em>ⲙ̀-</em>) <em>ⲙ̀ⲙⲟ⸗</em> (de l'ég. <i>m</i>).<sup class="footnote">3</sup> «dans».</p>
 				<div id="section-316" class="section" data-section-no="316">
 					<p>Cette préposition (65) signifie:</p>
-					<p>1. «dans, pendant» pour le lieu et le temps:</p>
+					<p><b>1.</b> «dans, pendant» pour le lieu et le temps:</p>
 					<p><em>ⲙ̀ⲡⲁⲓⲉⲟⲟⲩ</em> «en ce jour», <em>ⲙ̀ⲡⲁⲓⲙⲁ</em> «en ce lieu».</p>
 					<p><em>ⲁϥⲟϩⲓ ⲙ̀ⲙⲁⲩ ⲛ̀ⲉϩⲟⲟⲩ ⲥⲛⲁⲩ</em> «il passa là deux jours»<sup class="footnote">4</sup>.</p>
 					<p><em>ⲁϥⲱⲛϧ ⲛ̀ϫⲉ ⲥⲏⲑ ⲛ̀ⲱ̅ⲉ̅ ⲛ̀ⲣⲟⲙⲡⲓ</em> «Seth vécut 805 ans»<sup class="footnote">5</sup>.
 					</p>
-					<p>2. «de, hors de, <em class="ar">من</em>». Dans ce sens elle est généralement précédée de <em>ⲉⲃⲟⲗ</em>, <em>ⲥⲁⲃⲟⲗ</em>: <em>ⲙ̀ⲡⲉⲣⲟⲩⲉⲓ ⲥⲁⲃⲟⲗ ⲙ̀ⲙⲟⲓ</em> «ne t'éloigne pas de moi»<sup class="footnote">6</sup>.</p>
-					<p>3. «par, par le moyen de», pour l'instrument et le serment:</p>
+					<p><b>2.</b> «de, hors de, <em class="ar">من</em>». Dans ce sens elle est généralement précédée de <em>ⲉⲃⲟⲗ</em>, <em>ⲥⲁⲃⲟⲗ</em>: <em>ⲙ̀ⲡⲉⲣⲟⲩⲉⲓ ⲥⲁⲃⲟⲗ ⲙ̀ⲙⲟⲓ</em> «ne t'éloigne pas de moi»<sup class="footnote">6</sup>.</p>
+					<p><b>3.</b> «par, par le moyen de», pour l'instrument et le serment:</p>
 					<p><em>ⲛ̀ⲧⲥⲏϥⲓ</em> «par l'épée»;</p>
 					<p><em>ⲁϥⲱⲣⲕ ⲙ̀ⲫⲏ ⲉⲧϭⲟⲥⲓ</em> «il a juré par le Très-Haut»<sup class="footnote">7</sup>.</p>
-					<p>4. Elle sert de lien entre les verbes «être, devenir, faire, paraître» et leur attribut:</p>
+					<p><b>4.</b> Elle sert de lien entre les verbes «être, devenir, faire, paraître» et leur attribut:</p>
 					<p><em>ⲟⲓ ⲛ̀ⲟⲩⲣⲟ</em> «être roi».</p>
 					<p><em>ⲁϥϣⲱⲡⲓ ⲛ̀ⲟⲩⲙⲁⲛⲉⲥⲱⲟⲩ</em> «il devint berger»<sup class="footnote">8</sup>.</p>
 					<p class="footnote">1. Jean 6, 5.</p>
@@ -6903,24 +6903,22 @@
 					<p class="footnote">8. Gen. 4, 2.</p>
 					<p><em>ϥⲛⲁⲁⲓⲧⲉⲛ ⲛ̀ⲣⲁⲙⲁⲟ</em> «il nous rendra riches»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲁϥⲟϩⲓ ϧⲉⲛ ⲫⲏ ⲉ ⲛⲁϥⲟⲓ ⲙ̀ⲙⲟϥ</em> «il est resté dans ce qu'il était»<sup class="footnote">2</sup>.</p>
-					<p>5. Elle unit le complément direct à la forme absolue des verbes (277).</p>
-					<p><em>ⲛⲉⲙ- ⲛⲉⲙ⸗</em> «avec».</p>
+					<p><b>5.</b> Elle unit le complément direct à la forme absolue des verbes (277).</p>
 				</div>
+				<p><em>ⲛⲉⲙ- ⲛⲉⲙ⸗</em> «avec».</p>
 				<p>Pour la suffixation, voir 61.</p>
 				<div id="section-317" class="section" data-section-no="317">
 					<p>Cette préposition signifie:</p>
-					<p>1. «avec»: <em>ϯ ⲛⲉⲙⲱⲧⲉⲛ</em> «je suis avec vous»<sup class="footnote">3</sup>.</p>
-					<p>2. «à» après le verbe <em>ⲥⲁϫⲓ</em>: <em>ⲁϥⲥⲁϫⲓ ⲛⲉⲙⲱⲟⲩ</em> «il leur parla»<sup class="footnote">4</sup>.</p>
-					<p>3. Elle sert à unir les noms et pronoms, comme conjonction (333): <em>ⲡⲉⲕⲓⲱⲧ ⲛⲉⲙ ⲁⲛⲟⲕ</em> «ton père et moi»<sup class="footnote">5</sup>.</p>
+					<p><b>1.</b> «avec»: <em>ϯ ⲛⲉⲙⲱⲧⲉⲛ</em> «je suis avec vous»<sup class="footnote">3</sup>.</p>
+					<p><b>2.</b> «à» après le verbe <em>ⲥⲁϫⲓ</em>: <em>ⲁϥⲥⲁϫⲓ ⲛⲉⲙⲱⲟⲩ</em> «il leur parla»<sup class="footnote">4</sup>.</p>
+					<p><b>3.</b> Elle sert à unir les noms et pronoms, comme conjonction (333): <em>ⲡⲉⲕⲓⲱⲧ ⲛⲉⲙ ⲁⲛⲟⲕ</em> «ton père et moi»<sup class="footnote">5</sup>.</p>
 				</div>
 				<div id="section-318" class="section" data-section-no="318">
 					<p><em>ⲟⲩⲃⲉ- ⲟⲩⲃⲏ⸗</em> «contre, vers».</p>
 					<table>
 						<tr>
-							<th>Sing.</th>
-							<th></th>
-							<th>Pl.</th>
-							<th></th>
+							<th colspan="2">Sing.</th>
+							<th colspan="2">Pl.</th>
 						</tr>
 						<tr>
 							<td>1.</td>
@@ -6931,33 +6929,29 @@
 						<tr>
 							<td>2 m.</td>
 							<td><em>ⲟⲩⲃⲏⲕ</em></td>
-							<td>2.</td>
-							<td><em>ⲟⲩⲃⲉ-ⲑⲏⲛⲟⲩ</em></td>
+							<td rowspan="2">2.</td>
+							<td rowspan="2"><em>ⲟⲩⲃⲉ-ⲑⲏⲛⲟⲩ</em></td>
 						</tr>
 						<tr>
 							<td>f.</td>
 							<td><em>ⲟⲩⲃⲏ</em></td>
-							<td></td>
-							<td></td>
 						</tr>
 						<tr>
 							<td>3 m.</td>
 							<td><em>ⲟⲩⲃⲏϥ</em></td>
-							<td>3.</td>
-							<td><em>ⲟⲩⲃⲏⲟⲩ</em></td>
+							<td rowspan="2">3.</td>
+							<td rowspan="2"><em>ⲟⲩⲃⲏⲟⲩ</em></td>
 						</tr>
 						<tr>
 							<td>f.</td>
 							<td><em>ⲟⲩⲃⲏⲥ</em></td>
-							<td></td>
-							<td></td>
 						</tr>
 					</table>
 					<p>Cette préposition est d'assez rare occurrence:</p>
 					<p><em>ⲛⲉⲛⲃⲁⲗ ⲟⲩⲃⲏⲕ ⲡϭⲟⲓⲥ</em> «nos yeux sont vers toi, Seigneur»<sup class="footnote">6</sup>.</p>
 					<p><em>ϯ ⲟⲩⲃⲉ-</em> «donner contre, résister à».</p>
-					<p><em>ⲟⲩⲧⲉ- ⲟⲩⲧⲱ⸗</em> «entre».</p>
 				</div>
+				<p><em>ⲟⲩⲧⲉ- ⲟⲩⲧⲱ⸗</em> «entre».</p>
 				<div id="section-319" class="section" data-section-no="319">
 					<p><em>ⲟⲩⲧⲉ ⲧⲫⲉ ⲛⲉⲙ ⲡⲕⲁϩⲓ</em> «entre le ciel et la terre»<sup class="footnote">7</sup>.</p>
 					<p><em>ⲟⲩⲧⲱⲓ ⲛⲉⲙⲱⲧⲉⲛ</em> «entre moi et vous»<sup class="footnote">8</sup>.</p>
@@ -6970,14 +6964,14 @@
 					<p class="footnote">7. Bar. 6, 54.</p>
 					<p class="footnote">8. Gen. 9, 15.</p>
 					<p><em>ⲟⲩⲧⲱⲓ ⲛⲉⲙ ⲟⲩⲧⲉ ⲯⲩⲭⲏ ⲛⲓⲃⲉⲛ ⲉⲧⲟⲛϧ</em> «entre moi et toute âme vivante»<sup class="footnote">1</sup>.</p>
-					<p><em>ϣⲁ- ϣⲁⲣⲟ⸗</em> «jusqu'à».</p>
 				</div>
+				<p><em>ϣⲁ- ϣⲁⲣⲟ⸗</em> «jusqu'à».</p>
 				<div id="section-320" class="section" data-section-no="320">
 					<p><em>ϣⲁ ⲁⲩⲣⲏϫⲥ ⲛ̀ϯⲟⲓⲕⲟⲩⲙⲉⲛⲏ</em> «jusqu'à l'extrémité de la terre»<sup class="footnote">2</sup>.</p>
 					<p><em>ϣⲁ ⲉⲛⲉϩ</em> «jusqu'à l'éternité».</p>
 					<p>Sur <em>ϣⲁ</em> employé comme conjonction avec le subjonctif, voir 251.</p>
-					<p><em>ϧⲁ- ϧⲁⲣⲟ⸗</em> «sous».</p>
 				</div>
+				<p><em>ϧⲁ- ϧⲁⲣⲟ⸗</em> «sous».</p>
 				<div id="section-321" class="section" data-section-no="321">
 					<p>Signifie:</p>
 					<p>1. «sous»: <em>ϧⲁ ⲟⲩⲙⲉⲛⲧ</em> «sous le boisseau»<sup class="footnote">3</sup>.</p>
