--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -6974,19 +6974,19 @@
 				<p><em>ϧⲁ- ϧⲁⲣⲟ⸗</em> «sous».</p>
 				<div id="section-321" class="section" data-section-no="321">
 					<p>Signifie:</p>
-					<p>1. «sous»: <em>ϧⲁ ⲟⲩⲙⲉⲛⲧ</em> «sous le boisseau»<sup class="footnote">3</sup>.</p>
+					<p><b>1.</b> «sous»: <em>ϧⲁ ⲟⲩⲙⲉⲛⲧ</em> «sous le boisseau»<sup class="footnote">3</sup>.</p>
 					<p>Dans ce sens il s'emploie avec les verbes qui signifient «porter» lorsque le porteur est supposé être <i>sous</i> le fardeau:</p>
 					<p><em>ⲉⲧⲟⲡⲧ ϧⲁ ⲛⲟⲩⲉⲧⲫⲱⲟⲩⲓ</em> «chargés de leurs fardeaux»<sup class="footnote">4</sup>.</p>
-					<p>2. «au sujet de, pour <i>ou</i> contre» après le verbe «témoigner»; «contre» après «murmurer»:</p>
+					<p><b>2.</b> «au sujet de, pour <i>ou</i> contre» après le verbe «témoigner»; «contre» après «murmurer»:</p>
 					<p><em>ⲉⲣⲙⲉⲑⲣⲉ ϧⲁ</em> «témoigner pour <i>ou</i> contre»<sup class="footnote">5</sup>.
 					</p>
-					<p>3. «pour»: <em>ⲟⲩⲃⲁⲗ ϧⲁ ⲟⲩⲃⲁⲗ</em> «œil pour œil»<sup class="footnote">6</sup>.</p>
+					<p><b>3.</b> «pour»: <em>ⲟⲩⲃⲁⲗ ϧⲁ ⲟⲩⲃⲁⲗ</em> «œil pour œil»<sup class="footnote">6</sup>.</p>
 					<p>Dans ce sens il précède le complément de prix:</p>
 					<p><em>ⲡⲓϣⲱⲡ ϧⲁ ϩⲁⲧ</em> «celui qui est acheté à prix d'argent»<sup class="footnote">7</sup>.</p>
-					<p>4. «de, au sujet de»:</p>
+					<p><b>4.</b> «de, au sujet de»:</p>
 					<p><em>ϯⲗⲟⲅⲟⲥ ϧⲁ</em> «rendre compte de»<sup class="footnote">8</sup>.</p>
 					<p><em>ϥⲓ ⲫⲣⲱⲟⲩϣ ϧⲁ</em> «s'occuper de»<sup class="footnote">9</sup>.</p>
-					<p>5. «comme, en qualité de»:</p>
+					<p><b>5.</b> «comme, en qualité de»:</p>
 					<p><em>ⲁⲩϯ ⲛ̀ⲓⲱⲥⲏⲫ ⲉⲃⲟⲗ ϧⲁ ⲃⲱⲕ</em> «ils vendirent Joseph comme esclave»<sup class="footnote">10</sup>.</p>
 					<p class="footnote">1. Gen. 9, 16.</p>
 					<p class="footnote">2. Ps. 18, 4.</p>
@@ -6998,16 +6998,14 @@
 					<p class="footnote">8. Mt. 12, 36.</p>
 					<p class="footnote">9. Mt. 6, 25.</p>
 					<p class="footnote">10. Ps. 104, 17.</p>
-					<p><em>ϧⲉⲛ- ⲛ̀ϧⲏⲧ⸗</em> «dans».</p>
 				</div>
+				<p><em>ϧⲉⲛ- ⲛ̀ϧⲏⲧ⸗</em> «dans».</p>
 				<div id="section-322" class="section" data-section-no="322">
 					<p>Avec les suff.:</p>
 					<table>
 						<tr>
-							<th>Sing.</th>
-							<th></th>
-							<th>Pl.</th>
-							<th></th>
+							<th colspan="2">Sing.</th>
+							<th colspan="2">Pl.</th>
 						</tr>
 						<tr>
 							<td>1.</td>
@@ -7018,39 +7016,35 @@
 						<tr>
 							<td>2 m.</td>
 							<td><em>ⲛ̀ϧⲏⲧⲕ</em></td>
-							<td>2.</td>
-							<td><em>ϧⲉⲛ-ⲑⲏⲛⲟⲩ</em> ou <em>ⲛ̀ϧⲏⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em></td>
+							<td rowspan="2">2.</td>
+							<td rowspan="2"><em>ϧⲉⲛ-ⲑⲏⲛⲟⲩ</em> <i>ou</i> <em>ⲛ̀ϧⲏⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em></td>
 						</tr>
 						<tr>
 							<td>f.</td>
 							<td><em>ⲛ̀ϧⲏϯ</em></td>
-							<td></td>
-							<td></td>
 						</tr>
 						<tr>
 							<td>3 m.</td>
 							<td><em>ⲛ̀ϧⲏⲧϥ</em></td>
-							<td>3.</td>
-							<td><em>ⲛ̀ϧⲏⲧⲟⲩ</em></td>
+							<td rowspan="2">3.</td>
+							<td rowspan="2"><em>ⲛ̀ϧⲏⲧⲟⲩ</em></td>
 						</tr>
 						<tr>
 							<td>f.</td>
 							<td><em>ⲛ̀ϧⲏⲧⲥ</em></td>
-							<td></td>
-							<td></td>
 						</tr>
 					</table>
 					<p>Signifie:</p>
-					<p>1. «dans»<sup class="footnote">1</sup>, pour le temps et le lieu:</p>
+					<p><b>1.</b> «dans»<sup class="footnote">1</sup>, pour le temps et le lieu:</p>
 					<p><em>ϧⲉⲛ ⲡⲓⲕⲟⲥⲙⲟⲥ</em> «dans le monde».</p>
 					<p><em>ϧⲉⲛ ⲧⲁⲣⲭⲏ</em> «au commencement».</p>
-					<p>2. «à, en»:</p>
+					<p><b>2.</b> «à, en»:</p>
 					<p><em>ϧⲉⲛ ⲫⲣⲁⲛ ⲙ̀ⲫⲓⲱⲧ</em> «au nom du Père».</p>
 					<p><em>ⲁⲓϯⲙⲁϯ ⲛ̀ϧⲏⲧϥ</em> «je me suis complu en lui»<sup class="footnote">2</sup>.</p>
-					<p>3. «au moyen de» pour l'instrument: <em>ϧⲱⲧⲉⲃ ϧⲉⲛ ⲧⲥⲏϥⲓ</em> «tuer par l'épée»<sup class="footnote">3</sup>.</p>
-					<p>4. «parmi, au lieu de»: <em>ϧⲉⲛ ⲛⲓⲣⲱⲙⲓ</em> «parmi les hommes»<sup class="footnote">4</sup>.</p>
-					<p><em>ϩⲁ- ϩⲁⲣⲟ⸗</em> «vers».</p>
+					<p><b>3.</b> «au moyen de» pour l'instrument: <em>ϧⲱⲧⲉⲃ ϧⲉⲛ ⲧⲥⲏϥⲓ</em> «tuer par l'épée»<sup class="footnote">3</sup>.</p>
+					<p><b>4.</b> «parmi, au lieu de»: <em>ϧⲉⲛ ⲛⲓⲣⲱⲙⲓ</em> «parmi les hommes»<sup class="footnote">4</sup>.</p>
 				</div>
+				<p><em>ϩⲁ- ϩⲁⲣⲟ⸗</em> «vers».</p>
 				<div id="section-323" class="section" data-section-no="323">
 					<p>Signifie «vers, au devant de»:</p>
 					<p><em>ⲁⲩⲓ̀ ϩⲁⲣⲟϥ</em> «ils vinrent vers lui»<sup class="footnote">5</sup>.</p>
@@ -7065,16 +7059,14 @@
 					<p class="footnote">6. Jean 1, 43.</p>
 					<p class="footnote">7. Gen. 22, 19.</p>
 					<p class="footnote">8. Ex. 20, 24. Cf. AB. p. 47.</p>
-					<p><em>ϩⲓ- ϩⲓⲱⲧ⸗</em> «sur».</p>
 				</div>
+				<p><em>ϩⲓ- ϩⲓⲱⲧ⸗</em> «sur».</p>
 				<div id="section-324" class="section" data-section-no="324">
 					<p>Avec les suffixes:</p>
 					<table>
 						<tr>
-							<th>Sing.</th>
-							<th></th>
-							<th>Pl.</th>
-							<th></th>
+							<th colspan="2">Sing.</th>
+							<th colspan="2">Pl.</th>
 						</tr>
 						<tr>
 							<td>1.</td>
@@ -7085,63 +7077,58 @@
 						<tr>
 							<td>2 m.</td>
 							<td><em>ϩⲓⲱⲧⲕ</em></td>
-							<td>2.</td>
-							<td><em>ϩⲓ-ⲑⲏⲛⲟⲩ</em></td>
+							<td rowspan="2">2.</td>
+							<td rowspan="2"><em>ϩⲓ-ⲑⲏⲛⲟⲩ</em></td>
 						</tr>
 						<tr>
 							<td>f.</td>
 							<td><em>ϩⲓⲱϯ</em></td>
-							<td></td>
-							<td></td>
 						</tr>
 						<tr>
 							<td>3 m.</td>
 							<td><em>ϩⲓⲱⲧϥ</em></td>
-							<td>3.</td>
-							<td><em>ϩⲓⲱⲧⲟⲩ</em></td>
+							<td rowspan="2">3.</td>
+							<td rowspan="2"><em>ϩⲓⲱⲧⲟⲩ</em></td>
 						</tr>
 						<tr>
 							<td>f.</td>
 							<td><em>ϩⲓⲱⲧⲥ</em></td>
-							<td></td>
-							<td></td>
 						</tr>
 					</table>
 					<p>Devant un nom: <em>ϩⲓ-</em>.</p>
 					<p>Signifie:</p>
-					<p>1. «sur, <em class="ar">على</em>»:</p>
+					<p><b>1.</b> «sur, <em class="ar">على</em>»:</p>
 					<p><em>ϩⲓ ⲡⲓⲙⲱⲓⲧ</em> «sur le chemin»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲁϥϣⲱⲡⲓ ϩⲓ ⲡⲧⲱⲟⲩ</em> «il habita sur la montagne»<sup class="footnote">2</sup>.</p>
-					<p>2. «dans, <em class="ar">في</em>»: <em>ϩⲓ ⲡϣⲁϥⲉ</em> «dans le désert»<sup class="footnote">3</sup>.</p>
-					<p>3. «sous, du temps de, <em class="ar">على عهد</em>»: <em>ϩⲓ ⲕⲗⲁⲩⲇⲓⲟⲥ</em> «sous Claudius»<sup class="footnote">4</sup>.</p>
-					<p>4. «avec, <em class="ar">بِ مع</em>»: <em>ϣⲁⲩⲟⲩⲟⲙϥ ϩⲓ ⲱⲓⲕ</em> «ils le mangent avec du pain»<sup class="footnote">5</sup>.</p>
-					<p>5. «de, en»:</p>
+					<p><b>2.</b> «dans, <em class="ar">في</em>»: <em>ϩⲓ ⲡϣⲁϥⲉ</em> «dans le désert»<sup class="footnote">3</sup>.</p>
+					<p><b>3.</b> «sous, du temps de, <em class="ar">على عهد</em>»: <em>ϩⲓ ⲕⲗⲁⲩⲇⲓⲟⲥ</em> «sous Claudius»<sup class="footnote">4</sup>.</p>
+					<p><b>4.</b> «avec, <em class="ar">بِ مع</em>»: <em>ϣⲁⲩⲟⲩⲟⲙϥ ϩⲓ ⲱⲓⲕ</em> «ils le mangent avec du pain»<sup class="footnote">5</sup>.</p>
+					<p><b>5.</b> «de, en»:</p>
 					<p><em>ϩⲓ ⲟⲩⲥⲟⲡ</em> «en une fois»<sup class="footnote">6</sup>.</p>
 					<p><em>ϩⲓ ⲫⲟⲩⲉⲓ</em> «de loin».</p>
 				</div>
-				<p>II. Prépositions composées.</p>
+				<h6>II. Prépositions composées.</h6>
 				<div id="section-325" class="section" data-section-no="325">
 					<p>Les prépositions composées sont formées d'une préposition simple et d'un substantif indiquant une partie du corps humain: <em>ϫⲱ⸗</em> «tête», <em>ϩⲣ⸗</em> (83) «face», <em>ⲧⲟⲧ⸗</em> (82) «main», <em>ⲣⲁⲧ⸗</em> (82) «pied», <em>ⲑⲟⲩⲱ⸗</em> «poitrine», ou le lieu: <em>ⲥⲁ</em>, <em>ⲥⲕⲉⲛ</em> «côté».</p>
 					<p>Prépositions composés:</p>
-					<p>1. de <em>ϫⲱ⸗</em> «tête»:</p>
+					<p><b>1.</b> de <em>ϫⲱ⸗</em> «tête»:</p>
 					<p><em>ⲉϫⲉⲛ- ⲉϫⲱ⸗</em> «sur, <em class="ar">على</em>»;</p>
 					<p><i>loc. prép.</i> <em>ⲉϩⲣⲏⲓ ⲉϫⲉⲛ</em> «sur <i>en montant</i>», <em>ⲉϧⲣⲏⲓ ⲉϫⲉⲛ</em> «sur <i>en descendant</i>»;</p>
 					<p><em>ⲓⲥϫⲉⲛ-</em> «depuis»;</p>
 					<p><em>ϧⲁϫⲉⲛ- ϧⲁϫⲱ⸗</em> «avant, devant»;</p>
-					<p><em>ϩⲓϫⲉⲛ- ϩⲓϫⲱ⸗</em> «sur», <i>loc. prép.</i>
-						<em>ⲉⲃⲟⲗ ϩⲓϫⲉⲛ</em> «de sur <i>en descendant</i>, de sur <i>en montant</i>», et plus rarement «de <i>en s'éloignant</i>», <em>ⲛ̀ϩⲣⲏⲓ ϩⲓϫⲉⲛ</em> «sur <i>sans mouvement</i>».</p>
+					<p><em>ϩⲓϫⲉⲛ- ϩⲓϫⲱ⸗</em> «sur», <i>loc. prép.</i> <em>ⲉⲃⲟⲗ ϩⲓϫⲉⲛ</em> «de sur <i>en descendant</i>, de sur <i>en montant</i>», et plus rarement «de <i>en s'éloignant</i>», <em>ⲛ̀ϩⲣⲏⲓ ϩⲓϫⲉⲛ</em> «sur <i>sans mouvement</i>».</p>
 					<p class="footnote">1. Mc. 11, 8.</p>
 					<p class="footnote">2. Gen. 21, 21.</p>
 					<p class="footnote">3. Luc 15, 4.</p>
 					<p class="footnote">4. Act. 11, 28.</p>
 					<p class="footnote">5. Is. 28, 27.</p>
 					<p class="footnote">6. Ps. 30, 12.</p>
-					<p>2. de <em>ϩⲣ⸗</em> «face»:</p>
+					<p><b>2.</b> de <em>ϩⲣ⸗</em> «face»:</p>
 					<p><em>ⲉϩⲣⲉⲛ- ⲉϩⲣ⸗</em> «vers, au devant de, par, contre»;</p>
 					<p><em>ⲛⲁϩⲣⲉⲛ- ⲛⲁϩⲣ⸗</em> «devant, auprès de».</p>
 				</div>
 				<div id="section-326" class="section" data-section-no="326">
-					<p>3. de <em>ⲧⲟⲧ⸗</em> «main»:</p>
+					<p><b>3.</b> de <em>ⲧⲟⲧ⸗</em> «main»:</p>
 					<p><em>ⲉⲧⲉⲛ- ⲉⲧⲟⲧ⸗</em> «à, <em class="ar">لِ</em>»;</p>
 					<p><em>ⲛ̀ⲧⲉⲛ- ⲛ̀ⲧⲟⲧ⸗</em> «à, au pouvoir de, par, de, <em class="ar">من</em>»:</p>
 					<p><em>ⲛⲁⲩϭⲓⲱⲙⲥ ⲛ̀ⲧⲟⲧϥ</em> «ils étaient baptisés par lui»<sup class="footnote">1</sup>.</p>
@@ -7152,15 +7139,15 @@
 					<p><em>ϩⲓⲧⲉⲛ- ϩⲓⲧⲟⲧ⸗</em> «par, par le moyen de», <i>loc. prép.</i> <em>ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ</em> «de <i>en venant</i>, par le moyen de» (276, 1).</p>
 				</div>
 				<div id="section-327" class="section" data-section-no="327">
-					<p>4. de <em>ⲣⲁⲧ⸗</em> «pied»:</p>
+					<p><b>4.</b> de <em>ⲣⲁⲧ⸗</em> «pied»:</p>
 					<p><em>ⲉⲣⲁⲧ⸗</em> «au pied de, sur pied»;</p>
 					<p><em>ⲛ̀ⲣⲁⲧ⸗</em> «à pied»;</p>
 					<p><em>ϧⲁⲣⲁⲧ⸗</em> «au pied de, sous»:</p>
 					<p><em>ⲁⲥⲃⲟⲣⲃⲉⲣ ⲙ̀ⲡⲓⲁⲗⲟⲩ ϧⲁⲣⲁⲧⲥ ⲛ̀ⲟⲩⲃⲱ ⲛ̀ϫⲱⲓⲧ</em> «elle jeta l'enfant au pied d'un olivier»<sup class="footnote">2</sup>.</p>
-					<p>5. de <em>ⲑⲟⲩⲱ⸗</em> «poitrine»: <em>ϧⲁⲑⲟⲩⲱ⸗</em> «près de», <em>ϩⲓⲑⲟⲩⲱ⸗</em> <i>même sens</i>.</p>
+					<p><b>5.</b> de <em>ⲑⲟⲩⲱ⸗</em> «poitrine»: <em>ϧⲁⲑⲟⲩⲱ⸗</em> «près de», <em>ϩⲓⲑⲟⲩⲱ⸗</em> <i>même sens</i>.</p>
 				</div>
 				<div id="section-328" class="section" data-section-no="328">
-					<p>6. de <em>ⲥⲁ-</em> «côté». Ce mot est préposition par lui-même; il indique la <i>situation</i> dans un lieu:</p>
+					<p><b>6.</b> de <em>ⲥⲁ-</em> «côté». Ce mot est préposition par lui-même; il indique la <i>situation</i> dans un lieu:</p>
 					<p><em>ⲥⲁ ⲡⲉⲓⲉⲃⲧ</em> «dans l'orient»<sup class="footnote">3</sup>.</p>
 					<p><em>ⲟⲩⲓⲛⲁⲙ ⲙ̀ⲙⲟⲕ</em> «à ta droite»<sup class="footnote">4</sup>.</p>
 					<p>Il peut être uni à l'article: <em>ⲉⲡⲥⲁ ⲙ̀ⲫⲓⲟⲙ</em> «du côté de la mer»<sup class="footnote">5</sup>.</p>
@@ -7179,7 +7166,7 @@
 					<p><em>ⲥⲱϣ ⲉⲃⲟⲗ ⲥⲁⲙⲉⲛϩⲏⲛ</em> «elle crie derrière nous»<sup class="footnote">3</sup>.</p>
 				</div>
 				<div id="section-329" class="section" data-section-no="329">
-					<p>7. de <em>ⲥⲕⲉⲛ-</em> «côté»: <em>ⲉⲥⲕⲉⲛ-</em> «à côté de, le long de, sur le bord de»:</p>
+					<p><b>7.</b> de <em>ⲥⲕⲉⲛ-</em> «côté»: <em>ⲉⲥⲕⲉⲛ-</em> «à côté de, le long de, sur le bord de»:</p>
 					<p><em>ⲉⲥⲕⲉⲛ ⲫⲓⲟⲙ</em> «sur le bord de la mer»<sup class="footnote">4</sup>.</p>
 					<p><em>ϩⲓⲥⲕⲉⲛ-</em> ou <em>ⲓⲥⲕⲉⲛ-</em> <i>même sens</i>:</p>
 					<p><em>ϩⲓⲥⲕⲉⲛ ⲫⲓⲟⲙ</em> «sur le bord de la mer»<sup class="footnote">5</sup>.
@@ -7187,7 +7174,7 @@
 					<p><em>ⲓⲥⲕⲉⲛ ⲫⲓⲁⲣⲟ</em> «sur le bord du fleuve»<sup class="footnote">6</sup>.</p>
 				</div>
 				<div id="section-330" class="section" data-section-no="330">
-					<p>III. Prépositions grecques.</p>
+					<h6>III. Prépositions grecques.</h6>
 					<p>Les principales prépositions grecques employées en copte sont:</p>
 					<p><em>ⲕⲁⲧⲁ</em> «selon»:</p>
 					<p><em>ⲕⲁⲧⲁ ⲫⲣⲏϯ</em> «comme».</p>
@@ -7207,10 +7194,10 @@
 					<p class="footnote">6. Gen. 36, 37.</p>
 					<p class="footnote">7. Gen. 2, 18.</p>
 				</div>
-				<p>Chapitre XIV.</p>
+				<h5>Chapitre XIV.</h5>
 				<p>Adverbes.</p>
 				<p>Il y a en copte un certain nombre d'adverbes simples tels que: <em>ⲁϩⲁ</em> «oui», <em>ⲑⲱⲛ</em> «où?», <em>ⲣⲁⲥϯ</em> «demain». On les apprendra par l'usage. Nous ne donnons ici que les règles générales.</p>
-				<p><i>1. Adverbes de temps et de lieu.</i></p>
+				<h6>1. Adverbes de temps et de lieu.</h6>
 				<div id="section-331" class="section" data-section-no="331">
 					<p>Ces adverbes se forment au moyen de la particule <em>ⲛ̀</em> (<em>ⲙ̀</em>) placée devant le nom de temps et de lieu:</p>
 					<p><em>ⲙ̀-ⲡⲁⲓⲙⲁ</em> «en ce lieu, ici»;</p>
