--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -7207,22 +7207,22 @@
 					<p><em>ⲙ̀-ⲙⲏⲛⲓ</em> «chaque jour»;</p>
 					<p><em>ⲛ̀-ⲣⲁⲥϯ</em> «demain».</p>
 				</div>
-				<p><i>2. Adverbes de manière.</i></p>
+				<h6>2. Adverbes de manière.</h6>
 				<div id="section-332" class="section" data-section-no="332">
 					<p>Les adverbes de manière se forment:</p>
-					<p>1. Au moyen de <em>ⲛ̀</em> (<em>ⲙ̀</em>) et d'un substantif ou d'un infinitif sans article:</p>
+					<p><b>1.</b> Au moyen de <em>ⲛ̀</em> (<em>ⲙ̀</em>) et d'un substantif ou d'un infinitif sans article:</p>
 					<p><em>ⲙ̀-ⲙⲉⲧⲣⲉⲙⲛ̀ⲭⲏⲙⲓ</em> «en égyptien»;</p>
 					<p><em>ⲛ̀-ⲭⲱⲗⲉⲙ</em> «rapidement»;</p>
 					<p><em>ⲛ̀-ⲭⲱⲡ</em> «en secret».</p>
-					<p>2. Au moyen de <em>ϧⲉⲛ</em> et d'un substantif ou d'un infinitif avec l'article <em>ⲟⲩ</em>:</p>
+					<p><b>2.</b> Au moyen de <em>ϧⲉⲛ</em> et d'un substantif ou d'un infinitif avec l'article <em>ⲟⲩ</em>:</p>
 					<p><em>ϧⲉⲛ ⲟⲩⲙⲉⲧⲉⲫⲗⲏⲟⲩ</em> «vainement»;</p>
 					<p><em>ϧⲉⲛ ⲟⲩⲟⲩⲱⲛϩ ⲉⲃⲟⲗ</em> «manifestement».</p>
 				</div>
-				<p>3. Au moyen de <em>ⲛ̀</em> et d'un adjectif: <em>ⲛ̀-ϣⲟⲣⲡ</em> «d'abord».</p>
 				<div id="section-333" class="section" data-section-no="333">
+					<p><b>3.</b> Au moyen de <em>ⲛ̀</em> et d'un adjectif: <em>ⲛ̀-ϣⲟⲣⲡ</em> «d'abord».</p>
 					<p>Avec les adjectifs composés de <em>ⲁⲧ</em> privatif et d'un verbe, <em>ⲛ̀</em> forme des expressions adverbiales qui se traduisent par l'infinitif précédé de <i>sans</i>: <em>ⲛ̀ⲁⲑⲟⲩⲱⲙ</em> «sans manger»<sup class="footnote">1</sup>, <em>ⲛ̀ⲁⲧⲥⲱ</em> «sans boire», <em>ⲛ̀ⲁⲧϣⲗⲏⲗ</em> «sans prier»<sup class="footnote">2</sup>.</p>
 				</div>
-				<p><i>3. Adverbes de situation.</i></p>
+				<h6>3. Adverbes de situation.</h6>
 				<div id="section-334" class="section" data-section-no="334">
 					<p>Le copte possède plusieurs adverbes très employés qui sont formes d'une préposition simple et d'un des mots suivants indiquant la situation dans le lieu:</p>
 					<table>
@@ -7264,17 +7264,17 @@
 				</div>
 				<div id="section-335" class="section" data-section-no="335">
 					<p><i>Remarques.</i></p>
-					<p>1. Les adverbes composés de <em>ⲉ</em> forment des locutions prépositives, quand ils sont suivis de <em>ⲉ</em> ou de <em>ϩⲁ</em>:</p>
+					<p><b>1.</b> Les adverbes composés de <em>ⲉ</em> forment des locutions prépositives, quand ils sont suivis de <em>ⲉ</em> ou de <em>ϩⲁ</em>:</p>
 					<p><em>ⲉⲃⲟⲗ ϩⲁ</em> «de <i>en sortant</i>, <i>en s'éloignant</i>»;</p>
 					<p><em>ⲉϧⲟⲩⲛ ⲉ</em>, <em>ⲉϧⲟⲩⲛ ϩⲁ</em> «vers <i>en entrant</i>»;</p>
 					<p><em>ⲉⲡϣⲱⲓ ⲉ</em>, <em>ⲉⲡϣⲱⲓ ϩⲁ</em> «vers <i>en montant</i>»;</p>
 					<p><em>ⲉϩⲣⲏⲓ ⲉϫⲉⲛ</em> «sur», etc.</p>
 					<p>Très fréquent est l'emploi de <em>ⲉⲃⲟⲗ ϧⲉⲛ</em> «de, de parmi».</p>
-					<p>2. Après les composés de <em>ⲥⲁ</em> on emploie <em>ⲙ̀</em>, <em>ⲙ̀ⲙⲟ⸗</em>: <em>ⲥⲁⲃⲟⲗ ⲙ̀</em> «en dehors de», <em>ⲥⲁϧⲟⲩⲛ ⲙ̀</em> «au dedans de», <em>ⲥⲁⲡϣⲱⲓ ⲙ̀</em> «au-dessus de», <em>ⲥⲁⲡⲉⲥⲏⲧ ⲙ̀</em> «au-dessous de», etc.</p>
-					<p>3. Après les composés de <em>ⲛ̀</em> on emploie <em>ϧⲉⲛ</em>, <em>ⲛ̀ϧⲏⲧ⸗</em>: <em>ⲛ̀ϧⲣⲏⲓ ϧⲉⲛ</em>, <em>ⲛ̀ϩⲣⲏⲓ ϧⲉⲛ</em> «dans, parmi»:</p>
+					<p><b>2.</b> Après les composés de <em>ⲥⲁ</em> on emploie <em>ⲙ̀</em>, <em>ⲙ̀ⲙⲟ⸗</em>: <em>ⲥⲁⲃⲟⲗ ⲙ̀</em> «en dehors de», <em>ⲥⲁϧⲟⲩⲛ ⲙ̀</em> «au dedans de», <em>ⲥⲁⲡϣⲱⲓ ⲙ̀</em> «au-dessus de», <em>ⲥⲁⲡⲉⲥⲏⲧ ⲙ̀</em> «au-dessous de», etc.</p>
+					<p><b>3.</b> Après les composés de <em>ⲛ̀</em> on emploie <em>ϧⲉⲛ</em>, <em>ⲛ̀ϧⲏⲧ⸗</em>: <em>ⲛ̀ϧⲣⲏⲓ ϧⲉⲛ</em>, <em>ⲛ̀ϩⲣⲏⲓ ϧⲉⲛ</em> «dans, parmi»:</p>
 					<p><em>ⲁϥϣⲱⲡⲓ ⲛ̀ϧⲣⲏⲓ ⲛ̀ϧⲏⲧⲉⲛ</em> «il habita parmi nous»<sup class="footnote">1</sup>;</p>
 					<p><em>ⲛ̀ϩⲣⲏⲓ ⲛ̀ϧⲏⲧⲟⲩ</em> «parmi eux»<sup class="footnote">2</sup>.</p>
-					<p>4. Après les composés de <em>ⲉ</em>, <em>ⲛ</em>, on peut répéter <em>ϩⲓ</em>:</p>
+					<p><b>4.</b> Après les composés de <em>ⲉ</em>, <em>ⲛ</em>, on peut répéter <em>ϩⲓ</em>:</p>
 					<p><em>ⲉϩⲣⲏⲓ ϩⲓ ⲡϣⲁϥⲉ</em> «vers le désert»<sup class="footnote">3</sup>.</p>
 					<p><em>ⲛ̀ϩⲣⲏⲓ ϩⲓ ⲡϣⲁϥⲉ</em> «dans le désert»<sup class="footnote">4</sup>.</p>
 					<p><em>ⲛ̀ϧⲣⲏⲓ ϩⲓ ⲡϣⲁϥⲉ</em> <i>même sens</i><sup class="footnote">5</sup>.</p>
@@ -7284,7 +7284,7 @@
 					<p class="footnote">4. Ex. 8, 16.</p>
 					<p class="footnote">5. Gen. 21, 14.</p>
 				</div>
-				<p>Chapitre XV.</p>
+				<h5>Chapitre XV.</h5>
 				<p>Conjonctions.</p>
 				<p>Voici les conjonctions qui donnent lieu à quelques remarques de grammaire.</p>
 				<p><em>ⲟⲩⲟϩ</em> (Ṣ. <em>ⲁⲩⲱ</em>), <em>ⲛⲉⲙ</em> (Ṣ. <em>ⲙⲛ̄</em>), <em>ϩⲓ</em> «et».</p>
@@ -7297,10 +7297,10 @@
 					<p><em>ⲟⲩⲣⲱⲙⲓ ⲛ̀ⲥⲛⲟϥ ϩⲓ ⲭⲣⲟϥ</em> «un homme de sang et de malice»<sup class="footnote">3</sup>.</p>
 					<p><em>ⲡⲓⲕⲁϩⲓ ⲉⲧϧⲁϯ ⲛ̀ⲉⲣⲱϯ ϩⲓ ⲉⲃⲓⲱ</em> «la terre où coule le lait et le miel. <em class="ar">الارض التي تدُرّ لبنَا وعسلَا</em>»<sup class="footnote">4</sup>.</p>
 				</div>
-				<p><em>ϫⲉ-</em></p>
+				<h6><em>ϫⲉ-</em></h6>
 				<div id="section-337" class="section" data-section-no="337">
 					<p>S'emploie:</p>
-					<p>1. pour annoncer le discours direct:</p>
+					<p><b>1.</b> pour annoncer le discours direct:</p>
 					<p><em>ⲁⲛⲟⲕ ⲇⲉ ϯϫⲱ ⲙ̀ⲙⲟⲥ ⲛⲱⲧⲉⲛ ϫⲉ ⲙⲉⲛⲣⲉ ⲛⲉⲧⲉⲛϫⲁϫⲓ</em> «moi, je vous dis: Aimez vos ennemis»<sup class="footnote">5</sup>.</p>
 					<p class="footnote">1. Ps. 32, 9.</p>
 					<p class="footnote">2. Jean 11, 25.</p>
@@ -7309,16 +7309,16 @@
 					<p class="footnote">5. Mt. 5, 44.</p>
 					<p><em>ⲁϥϣⲉⲛⲟⲩ ϫⲉ ⲁⲣⲉⲧⲉⲛⲕⲱϯ ⲛ̀ⲥⲁⲛⲓⲙ</em> «il leur demanda: Qui cherchez-vous?»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲁϥϭⲱⲣⲉⲙ ⲉⲛⲓⲥⲛⲏⲟⲩ ϫⲉ ⲁⲙⲟⲛⲓ ⲙ̀ⲙⲟϥ</em> «il fit signe aux frères (en disant): Saisissez-le»<sup class="footnote">2</sup>.</p>
-					<p>2. Pour introduire le discours indirect, surtout après les verbes qui signifient «dire, déclarer, savoir, penser, voir». Nous le traduisons alors par «que».</p>
+					<p><b>2.</b> Pour introduire le discours indirect, surtout après les verbes qui signifient «dire, déclarer, savoir, penser, voir». Nous le traduisons alors par «que».</p>
 					<p>On ne peut parfois distinguer si le discours est direct ou indirect.</p>
 					<p><em>ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲓ︤ⲏ︦ⲥ︥ ϫⲉ ⲁⲓϫⲟⲥ ⲛⲱⲧⲉⲛ ϫⲉ ⲁⲛⲟⲕ ⲡⲉ</em> «Jésus répondit: Je vous ai dit que c'était moi»<sup class="footnote">3</sup>.</p>
 					<p><em>ϯⲉⲙⲓ ϫⲉ ⲙ̀ⲡⲉⲧⲉⲛⲉⲣϩⲟϯ ϧⲁⲧϩⲏ ⲙ̀ⲫⲛⲟⲩϯ</em> «je sais que vous ne craignez pas Dieu»<sup class="footnote">4</sup>.</p>
 					<p><em>ⲁϥⲛⲁⲩ ⲛ̀ϫⲉ ⲫⲛⲟⲩϯ ϫⲉ ⲛⲁⲛⲉϥ</em> «Dieu vit que c'était bien»<sup class="footnote">5</sup>.</p>
-					<p>3. Après les verbes qui signifient «appeler».</p>
+					<p><b>3.</b> Après les verbes qui signifient «appeler».</p>
 					<p><em>ⲉⲩⲉⲙⲟⲩϯ ⲉ ⲡⲉϥⲣⲁⲛ ϫⲉ ⲓ︤ⲏ︦ⲥ︥</em> «on l'appellera Jésus»<sup class="footnote">6</sup>.</p>
 					<p><em>ⲁ ⲫϯ ⲙⲟⲩϯ ⲉⲡⲓⲟⲩⲱⲓⲛⲓ ϫⲉ ⲡⲓⲉϩⲟⲟⲩ</em> «Dieu appela la lumière le jour»<sup class="footnote">7</sup>.</p>
 					<p><em>ⲁϥϯⲣⲉⲛ ⲡⲉϥⲣⲁⲛ ϫⲉ ⲥⲏⲑ</em> «il l'appela Seth»<sup class="footnote">8</sup>.</p>
-					<p>4. Il indique la <i>cause</i>, la <i>raison</i> d'une chose: </p>
+					<p><b>4.</b> Il indique la <i>cause</i>, la <i>raison</i> d'une chose: </p>
 					<p><em>ϥⲥⲙⲁⲣⲱⲟⲩⲧ ⲛ̀ϫⲉ ⲡϭⲥ ϫⲉ ⲁϥⲛⲟϩⲉⲙ ⲙ̀ⲡⲉϥⲗⲁⲟⲥ</em> «béni soit le Seigneur, car il a délivré son peuple»<sup class="footnote">9</sup>.</p>
 					<p><em>ⲙⲁⲣⲉⲛϩⲱⲥ ⲉ ⲡϭⲟⲓⲥ ϫⲉ ϧⲉⲛ ⲟⲩⲱⲟⲩ ⲅⲁⲣ ⲁϥϭⲓⲱⲟⲩ</em> «louons le Seigneur, car il a été grandement glorifié»<sup class="footnote">10</sup>.</p>
 					<p class="footnote">1. Jean 18, 7.</p>
@@ -7334,11 +7334,11 @@
 					<p><i>Chassez Macaire d'Edkou</i> <em>ϫⲉ ⲁ ⲟⲩⲥⲑⲉⲣⲧⲉⲣ ⲧⲁϩⲟⲛ</em> «car l'agitation s'est emparée de nous»<sup class="footnote">1</sup>.</p>
 					<p>Dans ce sens il est souvent suivi de <em>ⲟⲩⲏⲓ</em> «en vérité».</p>
 					<p><em>ϫⲉ ⲟⲩⲏⲓ ⲅⲁⲣ ⲡⲉϥϩⲁⲧ ⲡⲉ</em> «car, à la vérité, c'est son argent»<sup class="footnote">2</sup>.</p>
-					<p>5. Il indique le <i>but</i>, <i>l'intention</i>:</p>
+					<p><b>5.</b> Il indique le <i>but</i>, <i>l'intention</i>:</p>
 					<p><em>ⲁⲛⲓ̀ ϫⲉ ⲛ̀ⲧⲉⲛⲟⲩⲱϣⲧ ⲙ̀ⲙⲟϥ</em> «nous sommes venus pour l'adorer»<sup class="footnote">3</sup>.</p>
-					<p>6. <em>ϫⲉ</em> s'emploie comme le «de» français dans des expressions de ce genre: «le nom de magicien» <em>ⲡⲓⲣⲁⲛ ϫⲉ ⲙⲁⲅⲟⲥ</em><sup class="footnote">4</sup>.</p>
+					<p><b>6.</b> <em>ϫⲉ</em> s'emploie comme le «de» français dans des expressions de ce genre: «le nom de magicien» <em>ⲡⲓⲣⲁⲛ ϫⲉ ⲙⲁⲅⲟⲥ</em><sup class="footnote">4</sup>.</p>
 				</div>
-				<p><em>ϫⲉ</em> (Ṣ. <em>ϭⲉ</em>).</p>
+				<h6><em>ϫⲉ</em> (Ṣ. <em>ϭⲉ</em>).</h6>
 				<div id="section-338" class="section" data-section-no="338">
 					<p>Cette particule diffère de son homonyme par l'origine (ég. <i>gert</i>), par le sens et par l'emploi. Tandis que l'autre est proclitique, celle-ci est enclitique et signifie «mais, de plus, aussi». Elle s'emploie après une autre conjonction: <em>ϩⲟⲧⲉ ϫⲉ</em> «mais quand»<sup class="footnote">5</sup>. <em>ⲉⲡⲓⲇⲏ</em> «mais puisque»<sup class="footnote">6</sup>.</p>
 				</div>
