--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -7365,12 +7365,12 @@
 				<div id="section-341" class="section" data-section-no="341">
 					<p><em>ϫⲉ ⲕⲁⲛ</em> (<em class="gr">κἄν</em>) «lors même que»:</p>
 					<p><em>ⲡⲉϫⲁϥ ϫⲉ ϥⲟⲛϧ ⲛ̀ϫⲉ ⲡϭⲟⲓⲥ ϫⲉ ⲕⲁⲛ ⲁⲩϣⲁⲛϧⲟⲑⲃⲉⲧ ⲛ̀ϯⲛⲁϩⲱⲗ ⲁⲛ</em> «il dit: Vive le Seigneur, lors même qu'on me tuerait, je ne partirai point»<sup class="footnote">3</sup>.</p>
-					<p><em>ⲟⲛ</em> «aussi, encore».</p>
 				</div>
+				<p><em>ⲟⲛ</em> «aussi, encore».</p>
 				<div id="section-342" class="section" data-section-no="342">
 					<p>Vient après le mot qu'il détermine: <em>ϣⲧⲉⲙⲓ̀ ⲉ ⲡⲁⲓⲙⲁ ⲟⲛ</em> «ne pas revenir en ce lieu»<sup class="footnote">4</sup>. <em>ⲡⲉϫⲉ ⲫⲛⲟⲩϯ ⲟⲛ ⲙ̀ⲙⲱⲩⲥⲏⲥ</em> «Dieu dit encore à Moïse»<sup class="footnote">5</sup>.</p>
-					<p><em>ⲛ̀ⲑⲟϥ</em> «mais».</p>
 				</div>
+				<p><em>ⲛ̀ⲑⲟϥ</em> «mais».</p>
 				<div id="section-343" class="section" data-section-no="343">
 					<p>Ce mot, employé comme conjonction, est rare:</p>
 					<p><i>Les bêtes de somme des Egyptiens moururent</i> <em>ⲉⲃⲟⲗ ϫⲉ ⲛ̀ⲑⲟϥ ϧⲉⲛ ⲛⲓⲧⲉⲃⲛⲱⲟⲩⲓ ⲛ̀ⲧⲉ ⲛⲉⲛϣⲏⲣⲓ ⲙ̀ⲡⲓⲥⲣⲁⲏⲗ ⲙ̀ⲡⲉ ϩⲗⲓ ⲙⲟⲩ</em> «mais, des bêtes de somme des enfants d'Israël, aucune ne mourut»<sup class="footnote">6</sup>.</p>
@@ -7382,14 +7382,14 @@
 					<p class="footnote">5. Ex. 3, 15.</p>
 					<p class="footnote">6. Ex. 9, 6.</p>
 					<p><em>ⲙ̀ⲡⲉⲛⲑⲣⲉⲛⲉⲣⲙ̀ⲕⲁϩ ⲛ̀ϩⲏⲧ ⲉⲑⲃⲉ ϩⲗⲓ ⲛ̀ϩⲱⲃ ⲉⲑⲛⲁⲓ̀ ⲁⲗⲗⲁ ⲙⲁⲣⲉⲛⲉⲣⲙ̀ⲕⲁϩ ⲛ̀ⲑⲟϥ ⲉⲑⲃⲉ ⲡϫⲣⲟϩ ⲛ̀ⲛⲉⲛⲯⲩⲭⲏ</em> «ne nous attristons pas des malheurs qui peuvent nous arriver, mais affligeons-nous plutôt de l'indigence de nos âmes» <sup class="footnote">1</sup>.</p>
-					<p><em>ⲓⲉ</em> (Ṣ <em>ⲏ</em>) «ou, ou bien».</p>
 				</div>
+				<p><em>ⲓⲉ</em> (Ṣ <em>ⲏ</em>) «ou, ou bien».</p>
 				<div id="section-344" class="section" data-section-no="344">
 					<p><em>ⲓⲥϫⲉ ⲁⲕⲛⲁⲩ ⲓⲉ ⲁⲕⲥⲱⲧⲉⲙ</em> «si tu as vu ou entendu»<sup class="footnote">2</sup>.</p>
 					<p><em>ⲡⲉϥⲓⲱⲧ ⲓⲉ ⲧⲉϥⲙⲁⲩ</em> «son père ou sa mère»<sup class="footnote">3</sup>.</p>
 					<p>En se répétant elle forme le dilemme: <em>ⲁⲣⲓ ⲟⲩⲁⲓ ϧⲉⲛ ⲡⲁⲓⲃ̅ ⲓⲉ ⲛ̀ⲧⲉⲕϯⲭⲣⲱⲙ ⲛ̀ⲧⲁϣⲗⲏⲗ ⲓⲉ ⲛ̀ⲧⲉⲕϣⲗⲏⲗ ⲛ̀ⲧⲁϯⲭⲣⲱⲙ</em> «choisis un des deux, ou bien mets le feu et je prierai, ou bien prie et je mettrai le feu»<sup class="footnote">4</sup>.</p>
-					<p><em>ⲓⲉ</em> (Ṣ <em>ⲉⲓⲉ</em>, <em>ⲉⲉⲓⲉ</em>).</p>
 				</div>
+				<p><em>ⲓⲉ</em> (Ṣ <em>ⲉⲓⲉ</em>, <em>ⲉⲉⲓⲉ</em>).</p>
 				<div id="section-345" class="section" data-section-no="345">
 					<p>Cette particule, qu'il faut distinguer de la précédente, s'emploie entre une proposition conditionnelle et la proposition principale dont elle dépend, avec le sens de «pourtant, cependant, dans ce cas, alors».</p>
 					<p><em>ⲕⲁⲛ ⲁϥϣⲧⲉⲙⲓⲛⲓ ⲙ̀ⲡⲓⲙⲱⲟⲩ ⲓⲉ ⲟⲩϣⲁⲛϩⲑⲏϥ ⲡⲉ</em> «lors même qu'il n'amènerait point l'eau, cependant il est miséricordieux»<sup class="footnote">5</sup>.</p>
@@ -7406,7 +7406,7 @@
 					<p class="footnote">7. MS, 433.</p>
 					<p class="footnote">8. D. 574.</p>
 				</div>
-				<p>V. Des Propositions.</p>
+				<h4>V. Des Propositions.</h4>
 				<div id="section-346" class="section" data-section-no="346">
 					<p>Les propositions se divisent en <i>verbales</i> et en <i>nominales</i>.</p>
 					<p>La proposition verbale est celle qui contient un verbe à un mode quelconque; la proposition nominale, celle qui ne contient pas de verbe.</p>
@@ -7414,28 +7414,28 @@
 					<p>Nous traiterons d'abord de la proposition verbale et de la proposition nominale en général et spécialement quand elles sont indépendantes.</p>
 					<p>Nous verrons ensuite les différentes espèces de propositions qui ont une syntaxe particulière.</p>
 				</div>
-				<p>Chapitre XVI.</p>
+				<h5>Chapitre XVI.</h5>
 				<p>Proposition Verbale.</p>
-				<p>I. Ordre de ses éléments.</p>
+				<h6>I. Ordre de ses éléments.</h6>
 				<div id="section-347" class="section" data-section-no="347">
-					<p>1. L'ordre des éléments de la proposition verbale est généralement le suivant:</p>
-					<p>1. Auxiliaire;</p>
-					<p>2. Sujet, nom ou pronom affixe;</p>
-					<p>3. Verbe;</p>
-					<p>4. Complément direct;</p>
-					<p>5. Complément indirect;</p>
-					<p>6. Compléments circonstantiels.</p>
+					<p><b>1.</b> L'ordre des éléments de la proposition verbale est généralement le suivant:</p>
+					<p><b>1.</b> Auxiliaire;</p>
+					<p><b>2.</b> Sujet, nom ou pronom affixe;</p>
+					<p><b>3.</b> Verbe;</p>
+					<p><b>4.</b> Complément direct;</p>
+					<p><b>5.</b> Complément indirect;</p>
+					<p><b>6.</b> Compléments circonstantiels.</p>
 					<p><em>ⲁϥϯ ⲛ̀ⲟⲩϩⲙⲟⲧ ⲙ̀ⲡⲉϥⲗⲁⲟⲥ ⲙ̀ⲡⲉⲙⲑⲟ ⲛ̀ⲛⲓⲣⲉⲙⲛ̀ⲭⲏⲙⲓ</em> «il donna la faveur à son peuple devant les Egyptiens»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲁ ⲫⲛⲟⲩϯ ⲑⲁⲙⲓⲟ ⲛ̀ⲧⲫⲉ ⲛⲉⲙ ⲡⲕⲁϩⲓ</em> «Dieu créa le ciel et la terre»<sup class="footnote">2</sup>.</p>
 					<p><em>ⲁ ⲡϭⲟⲓⲥ ⲓⲛⲓ ⲛ̀ⲟⲩⲑⲟⲩⲣⲏⲥ ⲉϫⲉⲛ ⲡⲓⲕⲁϩⲓ ⲙ̀ⲡⲓⲉϩⲟⲟⲩ ⲧⲏⲣϥ</em> «le Seigneur fit venir un vent brûlant sur la terre, tout le jour»<sup class="footnote">3</sup>.</p>
-					<p>2. Lorsque le verbe est à l'état absolu et que le complément indirect est un pronom, celui-ci passe avant le complément direct:</p>
+					<p><b>2.</b> Lorsque le verbe est à l'état absolu et que le complément indirect est un pronom, celui-ci passe avant le complément direct:</p>
 					<p><em>ⲁ ⲡϭⲟⲓⲥ ⲥⲉⲙⲛⲓ ⲛⲁϥ ⲛ̀ϩⲁⲛϩⲁⲡ</em> «le Seigneur lui donna des préceptes»<sup class="footnote">4</sup>.</p>
 					<p><em>ⲙⲁ ⲛⲓⲣⲱⲙⲓ ⲛⲏⲓ ϭⲓ ⲇⲉ ⲛⲁⲕ ⲛ̀ⲛⲓϩⲑⲱⲣ</em> «donne-moi les hommes et prends les chevaux»<sup class="footnote">5</sup>.</p>
-					<p>3. Lorsque le verbe est accompagné de l'adverbe <em>ⲉⲃⲟⲗ</em>, celui-ci se place après le complément direct; dans le cas précédent (2) et lorsque le verbe est à l'état pronominal, il se met après le complément indirect:</p>
+					<p><b>3.</b> Lorsque le verbe est accompagné de l'adverbe <em>ⲉⲃⲟⲗ</em>, celui-ci se place après le complément direct; dans le cas précédent (2) et lorsque le verbe est à l'état pronominal, il se met après le complément indirect:</p>
 					<p><em>ⲟⲩⲱⲣⲡ ⲙ̀ⲡⲁⲗⲁⲟⲥ ⲉⲃⲟⲗ</em> «renvoie mon peuple»<sup class="footnote">6</sup>.</p>
 					<p><em>ⲛ̀ⲛⲉϥⲟⲩⲟⲛϩϥ ⲛⲁⲕ ⲉⲃⲟⲗ</em> «il ne se montrera pas à toi»<sup class="footnote">7</sup>.</p>
 				</div>
-				<p>II. Prolepse.</p>
+				<h6>II. Prolepse.</h6>
 				<div id="section-348" class="section" data-section-no="348">
 					<p>L'ordre qu'on vient d'indiquer est souvent changé. Lorsqu'on veut faire ressortir un élément, on le met en tête de la proposition en le remplaçant, si c'est le sujet ou un complément, par un pronom (<em class="ar">ضمير عائد</em>) qui s'accorde avec lui.</p>
 					<p class="footnote">1. Ex. 11, 3.</p>
@@ -7448,7 +7448,7 @@
 					<p>Nous appelons cette figure la <i>prolepse</i>. C'est une construction très fréquente en copte, surtout dans l'Ecriture sainte où les traducteurs ont tenu à conserver l'ordre des mots du texte grec.</p>
 					<p>La prolepse a lieu de deux manières.</p>
 				</div>
-				<p><i>1. Sans particule.</i></p>
+<p><i><b>1.</b> Sans particule.</i></p>
 				<div id="section-349" class="section" data-section-no="349">
 					<p>L'élément mis en évidence précède la proposition sans être introduit par aucune particule, surtout quand la proposition est unie à la précédente par <em>ⲅⲁⲣ</em> «car», <em>ⲇⲉ</em> «mais».</p>
 					<p><i>Prolepse du sujet:</i></p>
